--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,18 +7,23 @@
     "test": "jest",
     "build": "webpack",
     "deploy": "serverless deploy",
+    "fill-tables": "ts-node scripts/fillDB.ts",
     "publish": "npm run build && npm run deploy"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.428.0",
+    "@aws-sdk/lib-dynamodb": "^3.428.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
+    "aws-sdk": "^2.1473.0",
     "jest": "^29.7.0",
     "serverless-auto-swagger": "^2.12.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
+    "uuid": "^9.0.1",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
