--- a/import-service/package.json
+++ b/import-service/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.431.0",
+    "@aws-sdk/client-sns": "^3.438.0",
+    "@aws-sdk/client-sqs": "^3.438.0",
     "@aws-sdk/s3-request-presigner": "^3.431.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
     "@types/jest": "^29.5.6",
+    "aws-lambda": "^1.0.7",
     "aws-sdk-mock": "^5.8.0",
     "csv-parser": "^3.0.0",
     "jest": "^29.7.0",
