--- a/product-service/package.json
+++ b/product-service/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.428.0",
+    "@aws-sdk/client-sns": "^3.438.0",
     "@aws-sdk/lib-dynamodb": "^3.428.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1473.0",
+    "aws-sdk-mock": "^5.8.0",
     "jest": "^29.7.0",
     "serverless-auto-swagger": "^2.12.0",
     "ts-jest": "^29.1.1",
