--- a/authorization-service/package.json
+++ b/authorization-service/package.json
@@ -1,34 +1,23 @@
 {
-  "name": "import-service",
+  "name": "authorization-service",
   "version": "1.0.0",
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.431.0",
-    "@aws-sdk/client-sns": "^3.438.0",
-    "@aws-sdk/client-sqs": "^3.438.0",
-    "@aws-sdk/s3-request-presigner": "^3.431.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
-    "@types/jest": "^29.5.6",
-    "aws-lambda": "^1.0.7",
-    "aws-sdk-mock": "^5.8.0",
-    "csv-parser": "^3.0.0",
-    "dotenv": "^16.3.1",
-    "jest": "^29.7.0",
-    "serverless-auto-swagger": "^2.12.0",
-    "ts-jest": "^29.1.1"
+    "serverless-dotenv-plugin": "^6.0.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
-    "@types/node": "^14.18.63",
+    "@types/node": "^14.14.25",
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
